--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ analytics:
 author:
   name             : "David"
   avatar           : "/assets/images/me.jpg"
-  bio              : "19years experience in IT field"
+  bio              : "19&nbsp;years experience in IT field"
   location         : "Seoul"
   email            :
   links:
