--- a/_config.yml
+++ b/_config.yml
@@ -165,6 +165,7 @@ footer:
 include:
   - .htaccess
   - _pages
+  - .well-known
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -196,6 +197,8 @@ exclude:
 keep_files:
   - .git
   - .svn
+  - com.chrome.devtools.json
+  - .well-known
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
