--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ plainwhite:
     - post
   # generate social links in footer
   social_links:
-    twitter: samarsault
-    github:  samarsault
-    linkedIn: in/samarsault
+    # twitter: samarsault
+    github:  leeyonghe
+    linkedIn: in/lee-yong-hee-18912454/
     #dribbble: jekyll
     #flickr:   jekyll
     #instagram: jekyll
