--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: > # this means to ignore newlines until "show_exerpts:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 show_excerpts: true # set to true to show excerpts on the homepage
+excerpt_separator: <!--more--> # Custom excerpt separator
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -53,9 +54,9 @@ plainwhite:
 # - about.md
 
 # Build settings
-remote_theme: thelehhman/plainwhite-jekyll
+# remote_theme: thelehhman/plainwhite-jekyll
 
-plugins:
-  - jekyll-seo-tag
-  - jekyll-remote-theme
-#  - jekyll-feed
+# plugins:
+#   - jekyll-seo-tag
+#   - jekyll-remote-theme
+#   - jekyll-feed
