--- a/_config.yml
+++ b/_config.yml
@@ -54,9 +54,6 @@ plainwhite:
 # - about.md
 
 # Build settings
-# remote_theme: thelehhman/plainwhite-jekyll
-
-# plugins:
-#   - jekyll-seo-tag
-#   - jekyll-remote-theme
-#   - jekyll-feed
+markdown: kramdown
+highlighter: rouge
+permalink: /blog/:year/:month/:day/:title:output_ext
